[package]
name = "ctrl-z-changeset"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]

[lints]
workspace = true
